test/asm/invalid-underscore.err
error: Invalid integer constant, '_' after another '_'
    at invalid-underscore.asm(14)
error: Invalid integer constant, '_' after another '_'
    at invalid-underscore.asm(15)
error: Invalid integer constant, '_' after another '_'
    at invalid-underscore.asm(16)
error: Invalid integer constant, '_' after another '_'
    at invalid-underscore.asm(17)
error: Invalid integer constant, '_' after another '_'
    at invalid-underscore.asm(18)
error: Invalid integer constant, '_' after another '_'
    at invalid-underscore.asm(19)
error: Invalid integer constant, '_' after another '_'
    at invalid-underscore.asm(20)
error: Invalid integer constant, trailing '_'
    at invalid-underscore.asm(23)
error: Invalid integer constant, trailing '_'
    at invalid-underscore.asm(24)
error: Invalid integer constant, trailing '_'
    at invalid-underscore.asm(25)
error: Invalid integer constant, trailing '_'
    at invalid-underscore.asm(26)
error: Invalid graphics constant, trailing '_'
    at invalid-underscore.asm(27)
error: Invalid fixed-point constant, trailing '_'
    at invalid-underscore.asm(28)
error: Invalid integer constant, trailing '_'
    at invalid-underscore.asm(31)
error: Invalid integer constant, '_' after another '_'
    at invalid-underscore.asm(32)
Assembly aborted with 15 errors!
